	  selections using either the internal or alternate spell
	  checker.  Do all these using a global partition structure.
	  New functions partition_filestruct(),
	  unpartition_filestruct(), remove_magicline(), and
	  get_totals(); changes to write_marked(), do_int_spell_fix(),
	  do_alt_speller(), handle_sigwinch(), and do_replace_loop().
	  (DLR)
- files.c:
  do_insertfile()
	- Simplify by reusing variables whereever possible, and add a
	  parameter execute to indicate whether or not to be in "Execute
	  Command" mode. (DLR)
	- Rework so that goto is no longer needed, using do_writeout()
	  as a model. (DLR)
	- If file browsing succeeds, call statusq_abort() so that the
	  cursor position at the statusbar is reset. (DLR)
	- Add missing #ifdefs around the wrap_reset() call so that nano
	  compiles with wrapping disabled again. (DLR)
	- When inserting a file in non-multibuffer mode, preserve
	  placewewant as well as current_x, for consistency. (DLR)
  do_writeout()
	- Restructure if blocks for greater efficiency, using
	  do_insertfile() as a model. (DLR)
	- Simplify where possible, and use an int retval to hold the
	  return value instead of i. (DLR)
	- If file browsing succeeds, call statusq_abort() so that the
	  cursor position at the statusbar is reset. (DLR)
	- Remove unneeded calls to display_main_list(). (DLR)
  do_writeout_void()
	- Call display_main_list(), for consistency with
	  do_insertfile_void(). (DLR)
  write_file()
	- If we've tried to write to an unwritable file and we're not
	  prepending, tempname is NULL when it's passed to unlink().
	  This can cause problems if unlink() can't handle NULL, so
	  don't call it in that case. (David Benbennick)
  write_marked()
	- Remove check for MARK_ISSET's not being set. (DLR)
  open_prevfile(), open_nextfile()
	- Translate the "New Buffer" string when displaying "Switched
	  to" messages on the statusbar. (DLR)
- global.c:
  shortcut_init()
	- Remove redundant NANO_SMALL #ifdef. (DLR)