@@ -26,7 +26,6 @@
 #include <stdio.h>
 #include <unistd.h>
 #include <sys/wait.h>
-#include <sys/stat.h>
 #include <utime.h>
 #include <fcntl.h>
 #include <errno.h>
