@@ -27,7 +27,6 @@
 #include <stdio.h>
 #include <errno.h>
 #include <unistd.h>
-#include <sys/stat.h>
 #include <fcntl.h>
 #include <pwd.h>
 #include <ctype.h>
